[gd_scene load_steps=6 format=3 uid="uid://dsc3lhk5yygi3"]

[ext_resource type="Script" uid="uid://c60ygrkelaowe" path="res://scripts/battle_tb.gd" id="1_v7fdu"]
[ext_resource type="Texture2D" uid="uid://dfq0euksvevv4" path="res://vfx/target_marker.png" id="2_v7fdu"]

[sub_resource type="Animation" id="Animation_v7fdu"]
resource_name = "rotate"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_vf270"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pavcj"]
_data = {
&"RESET": SubResource("Animation_vf270"),
&"rotate": SubResource("Animation_v7fdu")
}

[node name="BattleSceneTB" type="Node2D"]
script = ExtResource("1_v7fdu")

[node name="BattleSceneTB_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="UI_container" type="VBoxContainer" parent="BattleSceneTB_UI"]
layout_mode = 0
offset_right = 289.0
offset_bottom = 150.0

[node name="action_container" type="HBoxContainer" parent="BattleSceneTB_UI/UI_container"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="attack_button" type="Button" parent="BattleSceneTB_UI/UI_container/action_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "ATTACK"

[node name="guard_button" type="Button" parent="BattleSceneTB_UI/UI_container/action_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "GUARD"

[node name="item_button" type="Button" parent="BattleSceneTB_UI/UI_container/action_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "ITEM"

[node name="stat_container" type="HSplitContainer" parent="BattleSceneTB_UI/UI_container"]
layout_mode = 2
size_flags_vertical = 6
collapsed = true
drag_area_highlight_in_editor = true

[node name="hp" type="Label" parent="BattleSceneTB_UI/UI_container/stat_container"]
layout_mode = 2
text = "HP: 10000 / 10000"

[node name="mp" type="Label" parent="BattleSceneTB_UI/UI_container/stat_container"]
layout_mode = 2
text = "MP: 10000 / 10000"

[node name="Attack_container" type="VBoxContainer" parent="BattleSceneTB_UI"]
layout_mode = 0
offset_left = -463.0
offset_top = -88.0
offset_right = -313.0
offset_bottom = 162.0

[node name="BattleSceneTB_camera" type="Camera2D" parent="."]

[node name="Allies" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Select_marker" type="Sprite2D" parent="."]
texture = ExtResource("2_v7fdu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Select_marker"]
libraries = {
&"": SubResource("AnimationLibrary_pavcj")
}

[connection signal="pressed" from="BattleSceneTB_UI/UI_container/action_container/attack_button" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="BattleSceneTB_UI/UI_container/action_container/guard_button" to="." method="_on_guard_button_pressed"]
[connection signal="pressed" from="BattleSceneTB_UI/UI_container/action_container/item_button" to="." method="_on_item_button_pressed"]
